   operations. The default is still no timeout (#140)
 - Introduce client.options context manager to temporarily override various
   options (only timeout for now) (#140)
 - Wrap the parsing of xml values in a try..except block and log an error 
   instead of throwing an exception (#137)
 - Fix xsd:choice xml rendering with nested choice/sequence structure (#221)


0.20.0 (2016-10-24)
-------------------
 - Major performance improvements / lower memory usage. Zeep now no longer
   copies data and alters it in place but instead uses a set to keep track of 
   modified data.
 - Fix parsing empty soap response (#223)
 - Major refactor of the xsd:extension / xsd:restriction implementation.
 - Better support for xsd:anyType, by re-using the xsd.AnyObject (#229)
 - Deserialize SOAP response without message elements correctly (#237)


0.19.0 (2016-10-18)
-------------------
 - **backwards-incompatible**: If the WSDL defines that the endpoint returns
   soap:header elements and/or multple soap:body messages then the return
   signature of the operation is changed. You can now explcitly access the 
   body and header elements.
 - Fix parsing HTTP bindings when there are no message elements (#185)
 - Fix deserializing RPC responses (#219
 - Add support for SOAP 1.2 Fault subcodes (#210, vashek)
 - Don't alter the _soapheaders elements during rendering, instead create a 
   deepcopy first. (#188)
 - Add the SOAPAction to the Content-Type header in SOAP 1.2 bindings (#211)
 - Fix issue when mixing elements and any elements in a choice type (#192)
 - Improving parsing of results for union types (#192)
 - Make ws-addressing work with lxml < 3.5 (#209)
 - Fix recursion error when xsi:type='anyType' is given. (#198)


0.18.1 (2016-09-23)
-------------------
 - PyPi release error


0.18.0 (2016-09-23)
-------------------
 - Fix parsing Any elements by using the namespace map of the response node 
   instead of the namespace map of the wsdl. (#184, #164)